# quant-data-pipeline-skill

./: .env.example  .gitignore  README.md  SKILL.md  install.sh  pyproject.toml  quant_data_tool.py  requirements.txt
src/: __init__.py  alert.py  cli.py  config.py  database.py  exceptions.py  rate_limiter.py  retry.py
src/models/: __init__.py  base.py  basic.py  daily.py  finance.py  finance_aux.py  macro.py  trading.py
src/sync/: __init__.py  backfill_gaps.py  base.py  basic.py  daily.py  finance.py  finance_aux.py  macro.py  trading.py
src/validator/: __init__.py  base.py  daily_validator.py  finance_validator.py
